fix: letter spacing paragraph

--- a/style.css
+++ b/style.css
@@ -46,7 +46,7 @@ h2 {
 p {
   font-size: 0.875rem;
   font-weight: 500;
-  letter-spacing: 0.5px;
+  letter-spacing: -0.5px;
   line-height: 1.4375rem;
   margin-block: 1.625rem;
 }
@@ -142,7 +142,8 @@ button:hover {
   line-height: 2rem;
   letter-spacing: -0.18px;
   display: grid;
-  grid-template-columns: auto auto;
+  grid-template-columns: auto 1fr;
+  gap: 1rem;
 }
 
 .product-card__cart-btn {
